--- a/server/views/test.html
+++ b/server/views/test.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <script src="bundle.js" type="text/javascript"></script>
+    <script src="/public/js/bundle.js" type="text/javascript"></script>
 </body>
 </html>
